--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   geolocator: ^7.7.1
   google_maps_flutter: ^2.1.0
   google_maps_flutter_web: ^0.3.2
+  http: ^0.13.4
   pinput: ^1.2.2
+  provider: ^6.0.1
+  flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
   change_app_package_name: ^1.0.0
