--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,15 @@ dependencies:
   firebase_storage: ^10.0.1
   flutter:
     sdk: flutter
+  flutter_polyline_points: ^1.0.0
   flutter_sim_country_code: ^0.1.1
   geolocator: ^7.7.1
   google_maps_flutter: ^2.1.0
   google_maps_flutter_web: ^0.3.2
   http: ^0.13.4
+  passbase_flutter: ^2.9.2
   pinput: ^1.2.2
   provider: ^6.0.1
-  flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
   change_app_package_name: ^1.0.0
