--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
    <application
-        android:label="indriver_clone"
+        android:label="safeDrive"
         android:icon="@mipmap/ic_launcher"> 
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyBmnVJzMnmIJq0oRk4BiOpr_hVZm3fIOBE"/>
