--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cloud_firestore: ^2.4.0
   cupertino_icons: ^1.0.2
   devicelocale: ^0.5.0
+  file_picker: ^4.2.4
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
   firebase_database: ^8.1.0
@@ -38,15 +39,15 @@ dependencies:
     sdk: flutter
   flutter_polyline_points: ^1.0.0
   flutter_sim_country_code: ^0.1.1
+  flutter_toggle_tab: ^1.1.7
   geolocator: ^7.7.1
   google_maps_flutter: ^2.1.0
   google_maps_flutter_web: ^0.3.2
   http: ^0.13.4
   intl: ^0.17.0
-  flutter_toggle_tab: ^1.1.7
+  path: ^1.8.0
   pinput: ^1.2.2
   provider: ^6.0.1
-  passbase_flutter: ^2.9.2
 
 dev_dependencies:
   change_app_package_name: ^1.0.0
