--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   path: ^1.8.0
   pinput: ^1.2.2
   provider: ^6.0.1
+  flutter_rating_bar: ^4.0.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   change_app_package_name: ^1.0.0
@@ -66,6 +68,10 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/safeDriveLogo.jpeg"
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -73,9 +79,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/safeDriveLogo.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
