--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
    <application
         android:label="safeDrive"
-        android:icon="@mipmap/ic_launcher"> 
+        android:icon="@mipmap/launcher_icon"> 
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyBmnVJzMnmIJq0oRk4BiOpr_hVZm3fIOBE"/>
+               android:value="AIzaSyAMd1DbT3kS4h1rG-xObd7YVESI0oFiyBk"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
